--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -125,7 +125,7 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
-.gallery {
+.photoGallery {
 	width: 100%;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
@@ -133,7 +133,7 @@ li:hover {
 	grid-row-gap: 20px;
 }
 
-.gallery img {
+.photoGallery img {
 	width: 100%;
 
 }
@@ -185,4 +185,7 @@ footer nav ul {
 	justify-content: flex-end;
 	margin: 2em
 }
-
+#text {
+	visibility: hidden;
+	display: none;
+}
