--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
+u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -98,6 +98,15 @@ nav li {
 li:hover {
 	color: #B1663C;
 }
+b.li {
+	color: #000;
+	text-align: center;
+	font-family: Work Sans;
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 600;
+	line-height: normal;
+}
 #introduction {
 	display: flex;
 	align-items: center;
@@ -139,7 +148,7 @@ li:hover {
 }
 #contact {
 	width: 50%;
-margin: auto;
+	margin: auto;
 }
 #contact > * {
 	text-align: center;
@@ -176,6 +185,7 @@ input[type="submit"]{
 	background-color: #1D6154;
 	margin : 2em auto ;
 	width: 180px;
+	height: 36px;
 	text-align: center;
 	border-radius: 60px ;
 }
@@ -236,3 +246,76 @@ div.filterBar {
 	width: 22px;
 	height: 22px;
 }
+/*********page html login ***************/
+#login {
+	display: flex;
+	justify-content: center;
+	color: #1D6154;
+	text-align: center;
+	font-family: Syne;
+	font-size: 30px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+	height: 36px;
+	width: 90%;
+}
+.log-in {
+	display:flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 35%;
+	margin: 150px 350px;
+	gap: 50px;
+}
+#formulaire2 {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	gap: 10px;
+}
+#email {
+	justify-content: center;
+	align-items: center;
+	width: 379px;
+	height: 51px;
+	color: #3D3D3D;
+	font-family: Work Sans;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
+	background: #FFF;
+	box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+}
+#mot-de-passe {
+	justify-content: center;
+	align-items: center;
+	width: 379px;
+	height: 51px;
+	color: #3D3D3D;
+	font-family: Work Sans;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
+	background: #FFF;
+	box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+}
+#bouton-envoyer.imput {
+	height: 36px;
+	width: 179px;
+	margin: 1em;
+}
+#oublier {
+	display: flex;
+	color: #3D3D3D;
+	font-family: Work Sans;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
+	text-decoration-line: underline;
+	justify-content: center;
+}
+
