--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -22,6 +22,8 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	text-decoration: none;
+	color: #000;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -160,22 +162,28 @@ b.li {
 #contact form {
 	text-align: left;
 	margin-top:30px;
+	margin-left: 90px;
 	display: flex;
 	flex-direction: column;
 }
 
-#contact input {
-	height: 50px;
+input {
+	width: 379px;
+	height: 51px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 #contact label {
 	margin: 2em 0 1em 0;
+	
+	width: 379px;
 }
 #contact textarea {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	
+	width: 379px;
 }
 
 input[type="submit"]{
@@ -183,13 +191,16 @@ input[type="submit"]{
 	font-weight: 700;
 	color: white;
 	background-color: #1D6154;
-	margin : 2em auto ;
+	margin : 2em 90px;
 	width: 180px;
 	height: 36px;
 	text-align: center;
 	border-radius: 60px ;
 }
-
+#envoyer-contact.imput {
+	width: 180px;
+	height: 36px;
+}
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
@@ -306,6 +317,13 @@ div.filterBar {
 	height: 36px;
 	width: 179px;
 	margin: 1em;
+	color: #FFF;
+	text-align: center;
+	font-family: Syne;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
 }
 #oublier {
 	display: flex;
@@ -318,4 +336,19 @@ div.filterBar {
 	text-decoration-line: underline;
 	justify-content: center;
 }
+.popup p {
+	display: flex;
+	height: 21px;
+	width: 380px;
+	background-color: antiquewhite;
+	box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+	color: crimson;
+	font-size: 16px;
+	font-weight: 600;
+	justify-content: center;
+}
+.popup {
+	display: flex;
+}
+
 
