--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -3,18 +3,17 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
+ span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, blockquote, pre, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
-u, i, center,
+a,u, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
+article, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
+menu, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
@@ -26,7 +25,7 @@ time, mark, audio, video {
 	color: #000;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
+article, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -85,6 +84,9 @@ h2{
 	font-weight: 700;
 	font-size: 30px;
 	color: #1D6154
+}
+nav {
+	display: flex;
 }
 nav div {
 	display: flex;
@@ -351,5 +353,158 @@ div.filterBar {
 .popup {
 	display: flex;
 }
+/****modale*****************************************************/
+*,
+::before,
+::after { 
+	box-sizing: border-box; 
+	margin:0px;
+	padding:0px;
+} 
+body {
+	background: rgba(255, 255, 255, 1);
+}
+.modal-btn.button {
+	padding: 10px 14px;
+	font-size: 18px;
+	margin: 100px auto;
+	display: block;
+	min-width: 150px;
+	cursor: pointer;
+}
+
+.modal-container {
+	visibility: hidden;
+	position: fixed;
+	top: 0;
+	left:0;
+	width: 100vw;
+	height: 100vh;
+	
+}
+.modal-container.active {
+	visibility: visible;
+}
+
+.overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.03)
+}
+
+.modal {
+	width: 630px;
+	height: 731px;
+	min-width: 300px;
+	border-radius: 10px;
+	background: rgba(255, 255, 255, 1);
+	padding: 30px;
+	position: absolute;
+	top: 60%;
+	left: 50%;
+	transform:translate(-50%,-50%)
+}
+.close-modal {
+	padding: 8px 10px;
+	border: none;
+	border-radius: 5px;
+	font-size: 18px;
+	position : absolute;
+	top: 10px;
+	right: 10px;
+	cursor: pointer;
+	background: #FFF;
+	border: #FFF;
+	color: #000;
+
+}
+.close-modal:hover {
+	background-color:rgba(14, 47, 40, 1);
+	color: #FFF;
+}
+.modal h1 {
+	color: #000;
+	text-align: center;
+	font-family: Work Sans;
+	font-size: 26px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	padding: 60px 0px;
+}
+p {
+	display: flex;
+}
+/*******  barre mode edition  *********************************/
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+}	
+.mode-edition {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	height: 59px;
+	width: 1440px; 
+	background: #000;
+	color:white;
+	align-items: baseline;
+	padding: 5px;
+	justify-content: center;
+	gap: 10px;
+}
+
+
+
+#text-edition  {
+	display: flex;
+	color: #FFF;
+	text-align: center;
+	font-family: Work Sans;
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+.fa-solid fa-pen-to-square {
+	display: flex;
+	color: #FFF;
+	width: 15.58px;
+	height: 15.58px;
+	fill: #FFF;
+	font-weight: 400;
+
+
+}
+#publier-changements {
+	display: flex;
+	width: 217px;
+	height: 38px;
+	color: #000;
+	text-align: center;
+	font-family: Work Sans;
+	font-size: 14px;
+	font-style: normal;
+	line-height: normal;
+	border-radius: 60px;
+	background: #FFF;
+	align-items: center;
+	padding: 23px;
+	
+	
+}
+.frame {
+	display: flex;
+	gap: 75%;
+	padding-top: 30px;
+	
+	
+}
+	
+
+
+
 
 
