--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -135,7 +135,6 @@ h4:hover {
 #introduction article {
 	display: flex;
 	flex-direction: column;
-	height: 192 px;
 	width: 40%;
 	color: #3D3D3D;
 	font-family: Work Sans;
@@ -424,10 +423,7 @@ div.filterBar {
 	flex-direction: column;
 }
 /****modale 1*****************************************************/
-*,
-::before,
-::after { 
-	box-sizing: border-box; 
+* {
 	margin:0px;
 	padding:0px;
 } 
@@ -654,40 +650,44 @@ i.fa-solid.fa-pen-to-square {
 	margin: 15px 182px;
 }
 #btn-ajouter-photos:hover, #btn-ajouter-photos:active {
+	background-color: #1D6154;
+}
+.fa-solid.fa-up-down-left-right::before {
+	position: absolute;
+	width: 10px;
+	height: 12px;
+	top: 195px;
+	right: 544px;
+	background:black;
+	color:white;
+	padding: 3px 2px;
+	border: none;
+	font-size: 10px;
+	border-radius: 2px;
+}
+.delete-button:hover, .delete-button:active {
 	background-color: rgba(14, 47, 40, 1);
+	border-color: #D65353;
 }
-.fa-solid.fa-xs.fa-up-down-left-right::before {
-	position: absolute;
-	width: 12px;
-	height: 14px;
-	top: 164px;
-	right: 513px;
-	background:black;
+.fa-solid.fa-trash-can {
+	width: 14px;
+	height: 11px;
+	font-size: 10px;	
 	color:white;
-	padding: 6px 2px;
-	border: none;
-	font-size: 9px;
-	border-radius: 2px;
 }
-.fa-solid.fa-xs.fa-up-down-left-right:hover,.fa-solid.fa-xs.fa-trash-can:hover .fa-solid.fa-xs.fa-up-down-left-right:active, .fa-solid.fa-xs.fa-trash-can:active {
-	background-color: #0E2F28;
-	color: #D65353;
-}
-.fa-solid.fa-xs.fa-trash-can {
+.delete-button {
 	position: absolute;
-	width: 13px;
-	height: 14px;	
-	background:black;
-	color:white;
-	padding: 6px 2px;
-	margin:-116px 44px;
-	border: none;
+    width: 17px;
+    height: 17px;
+	color: #000;
+    background-color: black;
+   	margin: -101px 57px;
 	border-radius: 2px;
-}
-.container-icons {
+    cursor: pointer;
+	border-color: black;
+}  
 	
-	padding: 0px 15px;
-}
+	
 
 #btn-supp-gallerie {
 	color: #D65353;
@@ -701,7 +701,6 @@ i.fa-solid.fa-pen-to-square {
 	line-height: normal;
 	background-color: white;
 	border-color: white;
-	border-radius: white;
 	margin: 0px 156px;
 	padding: 20px 35px;
 }
@@ -889,52 +888,6 @@ input.modal2formulaire {
 	line-height: normal;
 
 }
-
-/******** modale 3 **********************************/
-.modal3-container3 {
-	visibility: hidden;
-	position: fixed;
-	top: 0;
-	left:0;
-	width: 100vw;
-	height: 100vh;
-}
-.modal3-container3.active {
-	visibility: visible;
-}
-.overlay3 {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.7)
-}
-.modal3 {
-	width: 630px;
-	height: 731px;
-	min-width: 300px;
-	border-radius: 10px;
-	background: rgba(255, 255, 255, 1);
-	padding: 30px;
-	position: absolute;
-	top: 60%;
-	left: 50%;
-	transform:translate(-50%,-50%)
-	
-}
-.close-modal3 {
-	padding: 8px 10px;
-	border: none;
-	border-radius: 5px;
-	font-size: 18px;
-	position : absolute;
-	top: 10px;
-	right: 10px;
-	cursor: pointer;
-	background: #FFF;
-	border: #FFF;
-	color: #000;
-
-}
 .close-modal2:hover {
 	background-color:rgba(14, 47, 40, 1);
 	color: #FFF;
@@ -953,36 +906,7 @@ input.modal2formulaire {
 	padding: 60px 200px;
 	justify-content: center;
 }
-#reviens-arriere-page2 {
-	border-color:#3D3D3D;
-	padding: 8px 10px;
-	border: none;
-	border-radius: 5px;
-	font-size: 18px;
-	position : absolute;
-	top: 12px;
-	right: 591px;
-	cursor: pointer;
-	background: #FFF;
-	color: #3D3D3D;
-}
-#reviens-arriere-page2:hover, #reviens-arriere-page2:active {
-	background-color: #0E2F28;
-}
-#titre-modale3 {
-	display: flex;
-	color: #000;
-	text-align: center;
-	font-family: Work Sans;
-	font-size: 26px;
-	font-style: normal;
-	font-weight: 400;
-	width:100%;
-	height: 30px;
-	line-height: normal;
-	padding: 60px 200px;
-	justify-content: center;
-}
+
 #imageInput {
 	
 	padding: 0px;
